--- a/site1.html
+++ b/site1.html
@@ -15,43 +15,37 @@
   <body>
 
 <!-- menu principal -->
-    <nav class="navbar navbar-expand-lg" style="height: 90px;">
+    <nav class="navbar navbar-expand-lg bg-success tex-light" style="height: 90px;">
         <div class="container">
 
-          <a class="navbar-brand text-success" href="#"><Strong>Línguamus</Strong></a>
+          <a class="navbar-brand text-white" href="#"><Strong>Línguamus</Strong></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Sobre</a>
+                <a class="nav-link text-white" href="#">Sobre</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Método</a>
+                <a class="nav-link text-white" href="#">Método</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Cursos</a>
+                <a class="nav-link text-white" href="#">Cursos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Unidades</a>
+                <a class="nav-link text-white" href="#">Unidades</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Blog</a>
+                <a class="nav-link text-white" href="#">Blog</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Fale conosco</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
+                <a class="nav-link text-white" href="#">Fale conosco</a>
               </li>
             </ul>
-            <div class="d-flex">
-                <a href="#" class="btn btn-primary">Fale conosco</a>
-            </div>
           </div>
         </div>
       </nav>
@@ -60,19 +54,26 @@
 <head>
     <div class="container my-4">
         <div class="row">
-            <div class="col-12 col-lg-6">
-                <h1>A LÍNGUAMUS GARANTE O DOMÍNIO RÁPIDO DO SEU INGLÊS</h1>
-                <p>A Línguamus oferece uma garantia, em contrato, de que em 2 anos e meio você alcança um inglês de alto nível e fica preparado para realizar seus sonhos. Este é o Compromisso de Aprendizado Línguamus com você.</p>
-                <button>Saiba mais sobre o método</button>
-                <button>Conheça nossas unidades</button>
+            <div class="col-12 col-lg-6 pt-5">
+                <h1 class="text-center text-md-start">A LÍNGUAMUS GARANTE O <span class="text-primary mt-5">DOMÍNIO RÁPIDO </span>DO SEU INGLÊS</h1>
+                <p class="lead text-muted text-center text-md-start mt-4">A Línguamus oferece uma garantia, em contrato, de que em 2 anos e meio você alcança um inglês de alto nível e fica preparado para realizar seus sonhos. Este é o Compromisso de Aprendizado Línguamus com você.</p>
+                
+                <div class="mt-5">
+                  <button class="btn btn-success btn-lg">Saiba mais sobre o método</button>
+                  <button class="btn btn-success btn-lg">Conheça nossas unidades</button>
+                </div>
+                
             </div>
 
-            <div class="col-12 col-lg-6">
+            <div class="col-12 col-lg-6 p-3">
                 <img src="https://cdn.pixabay.com/photo/2018/11/22/12/26/learning-3831785__480.jpg" class="ïmg-fluid">
             </div>
         </div>
     </div>
 </head>
+<footer class="mt-4 bg-secondary text-center text-light p-4">
+  Todos os direitos reservados.
+</footer>
 
 <!-- Boostrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
